# pylsp-pyright

./: .dmypy.json  AUTHORS.txt  LICENSE  README.md  setup.cfg
.github/: ISSUE_TEMPLATE.md
pylsp_pyright/: plugin.py
test/: test_plugin.py
