
[metadata]
name = pylsp-pyright
version = 0.1
author = Joe Sadusk
author_email = joe@sadusk.com
url = https://github.com/jsadusk/pylsp-pyright
description = Plugin for pylsp to to type checking via pyright/basedpyright
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Software Development
    License :: OSI Approved :: MIT License


[options]

packages = find:

install_requires = 
    python-lsp-server

# python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_pyright = pylsp_pyright.plugin


[options.extras_require]
dev =
    pytest
    build
    twine
